--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "config": "^1.12.0",
     "redis": "^0.10.3",
     "stringify": "^3.1.0",
     "restify": "^2.7.0"
