--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "config": "^1.12.0",
+    "DVP-Common": "DuoSoftware/DVP-Common",
+    "DVP-DBModels": "DuoSoftware/DVP-DBModels",
     "redis": "^0.10.3",
     "stringify": "^3.1.0",
     "restify": "^2.7.0"
