--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "DVP-HTTPProgrammingMonitorAPI",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "AlertSubscriber.js",
   "dependencies": {
-    "config": "^1.12.0",
-    "DVP-Common": "DuoSoftware/DVP-Common",
-    "DVP-DBModels": "DuoSoftware/DVP-DBModels",
+    "config": "^1.13.0",
+    "DVP-Common": "^0.0.0",
+    "DVP-DBModels": "^0.0.0",
     "redis": "^0.10.3",
-    "stringify": "^3.1.0",
-    "restify": "^2.7.0"
+    "restify": "^2.8.5",
+    "stringify": "^3.1.0"
   },
   "devDependencies": {},
   "scripts": {
