--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "AlertSubscriber.js",
   "dependencies": {
-
-    "redis": "^0.10.3",
     "config": "^1.13.0",
-    "stringify": "^3.1.0",
+    "node-uuid": "^1.4.3",
+    "redis": "^0.10.3",
     "restify": "^2.8.5",
+    "stringify": "^3.1.0",
+    "nodemailer": "^1.3.4",
     "DVP-Common": "DuoSoftware/DVP-Common",
     "DVP-DBModels": "DuoSoftware/DVP-DBModels"
-
   },
   "devDependencies": {},
   "scripts": {
