--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "restify": "^2.8.5",
     "stringify": "^3.1.0",
     "nodemailer": "^1.3.4",
-    "DVP-Common": "DuoSoftware/DVP-Common",
-    "DVP-DBModels": "DuoSoftware/DVP-DBModels"
+    "dvp-common": "^0.0.2",
+    "dvp-dbmodels": "^0.0.19"
   },
   "devDependencies": {},
   "scripts": {
