--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "homepage": "https://github.com/DuoSoftware/DVP-HTTPProgrammingMonitorAPI#readme",
   "dependencies": {
     "config": "^1.19.0",
-    "dvp-common": "^0.8.4",
-    "dvp-dbmodels": "0.0.54",
+    "dvp-common": "1.1.0",
+    "dvp-dbmodels": "2.1.0",
     "node-uuid": "^1.4.7",
     "nodemailer": "^2.3.0",
     "redis": "^2.6.0-1",
